# nodit-cli

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.toml  install.sh
.githooks/: commit-msg
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cli-guide.md  coverage.md  interface.md  roadmap.md
docs/nodit-official/: README.md  SUMMARY.md  llms.txt  manifest.tsv  sitemap.xml  urls.txt
docs/nodit-official/raw/api/multichain-api/: lookupEntities.md
docs/nodit-official/raw/api/web3-data-api/: getAccountStats.md  getAddressByEnsName.md  getAssetHoldersById.md  getAssetMetadataByIds.md  getAssetMetadataByIssuer.md  getAssetTransfersByAccount.md  getAssetTransfersById.md  getAssetTransfersWithinRange.md  getAssetsOwnedByAccount.md  getBlockByHashOrNumber.md  getBlocksWithinRange.md  getDailyActiveAccountsStatsByContract.md  getDailyTransactionsStats.md  getDailyTransactionsStatsByContract.md  (+65 more)
docs/nodit-official/raw/guides/: account-management.md  api-key.md  auto-scaling.md  coupon.md  create-a-blog-post.md  credit.md  crypto-balance.md  data-square.md  dedicated-node.md  elastic-node.md  get-started-with-nodit.md  giwa-testnet-facuet.md  kaia-testnet-facuet.md  nodit-faq.md  nodit-mcp.md  nodit-overview.md  outstanding-charges.md  pricing-plans.md  referral-program.md  request-logs.md  security.md  service-status-monitoring.md  stream.md  subscription.md  team-account.md  usage-measuringcu.md  using-nodit-with-ai-llm-tools.md  web3-data-api.md  webhook.md
scripts/: sync_nodit_docs.sh
src/: cli.rs  config.rs  main.rs  output.rs
(+250 files in other folders)
