[package]
name = "nodit-cli"
version = "0.1.0"
edition = "2021"
description = "Rust CLI for Nodit services"
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
futures-util = "0.3"
hmac = "0.12"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.44", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
url = "2.5"
